--- a/examples/PortalWebAR.html
+++ b/examples/PortalWebAR.html
@@ -1,4 +1,90 @@
-﻿var THREEx = THREEx || {}
+﻿<!--
+/*
+ * Copyright 2017 Google Inc. All Rights Reserved.
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>three.ar.js - Spawn at Surface</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no,
+  minimum-scale=1.0, maximum-scale=1.0">
+    <style>
+        body {
+            font-family: monospace;
+            margin: 0;
+            overflow: hidden;
+            position: fixed;
+            width: 100%;
+            height: 100vh;
+            -webkit-user-select: none;
+            user-select: none;
+        }
+
+        #info {
+            position: absolute;
+            left: 50%;
+            bottom: 0;
+            transform: translate(-50%, 0);
+            margin: 1em;
+            z-index: 10;
+            display: block;
+            width: 100%;
+            line-height: 2em;
+            text-align: center;
+        }
+
+            #info * {
+                color: #fff;
+            }
+
+        .title {
+            background-color: rgba(40, 40, 40, 0.4);
+            padding: 0.4em 0.6em;
+            border-radius: 0.1em;
+        }
+
+        .links {
+            background-color: rgba(40, 40, 40, 0.6);
+            padding: 0.4em 0.6em;
+            border-radius: 0.1em;
+        }
+
+        canvas {
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+    </style>
+</head>
+<body>
+    <div id="info">
+        <span class="title">Move around to detect surfaces</span><br />
+        <span class="title">Tap to spawn objects on surfaces.</span><br />
+        <span class="title">2 or more finger tap to remove objects.</span><br />
+        <span class="links">
+            <a href="https://github.com/google-ar/three.ar.js">three.ar.js</a> -
+            <a href="https://developers.google.com/ar/develop/web/getting-started#examples">examples</a>
+        </span>
+    </div>
+    <script src="../third_party/three.js/three.js"></script>
+    <script src="../third_party/three.js/VRControls.js"></script>
+    <script src="../dist/three.ar.js"></script>
+    <script>
+
+var THREEx = THREEx || {}
 
 THREEx.Portal360 = function(videoImageURL, doorWidth, doorHeight){
 
@@ -253,3 +339,7 @@ THREEx.Portal360.prototype.update = function (position) {
 		this.insideMesh.visible = true
 	}
 }
+
+</script>
+</body>
+</html>
