--- a/examples/PortalWebAR.html
+++ b/examples/PortalWebAR.html
@@ -17,7 +17,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>three.ar.js - Spawn at Surface</title>
+    <title>three.ar.js - Portal Door</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no,
   minimum-scale=1.0, maximum-scale=1.0">
@@ -46,20 +46,22 @@
             text-align: center;
         }
 
-            #info * {
-                color: #fff;
+            #info a, #info .title {
+                padding: 0.4em 0.6em;
+                border-radius: 0.1em;
+            }
+
+            #info a {
+                color: rgba(255, 255, 255, 0.8);
+                background-color: rgba(40, 40, 40, 0.6);
+                font-weight: bold;
+                text-decoration: none;
             }
 
         .title {
+            color: rgba(255, 255, 255, 0.9);
             background-color: rgba(40, 40, 40, 0.4);
-            padding: 0.4em 0.6em;
-            border-radius: 0.1em;
-        }
-
-        .links {
-            background-color: rgba(40, 40, 40, 0.6);
-            padding: 0.4em 0.6em;
-            border-radius: 0.1em;
+            margin-left: 0.2em;
         }
 
         canvas {
@@ -71,275 +73,172 @@
 </head>
 <body>
     <div id="info">
-        <span class="title">Move around to detect surfaces</span><br />
-        <span class="title">Tap to spawn objects on surfaces.</span><br />
-        <span class="title">2 or more finger tap to remove objects.</span><br />
-        <span class="links">
-            <a href="https://github.com/google-ar/three.ar.js">three.ar.js</a> -
-            <a href="https://developers.google.com/ar/develop/web/getting-started#examples">examples</a>
-        </span>
+        <a href="https://github.com/google-ar/three.ar.js">three.ar.js</a><span class="title">Walk through the portal</span>
     </div>
-    <script src="../third_party/three.js/three.js"></script>
-    <script src="../third_party/three.js/VRControls.js"></script>
-    <script src="../dist/three.ar.js"></script>
+    <script src="https://google-ar.github.io/three.ar.js/third_party/three.js/three.js"></script>
+    <script src="https://google-ar.github.io/three.ar.js/third_party/three.js/VRControls.js"></script>
+    <script src="https://google-ar.github.io/three.ar.js/dist/three.ar.js"></script>
+    <script src="threex-portal-door.js"></script>
     <script>
 
-var THREEx = THREEx || {}
+var vrDisplay;
+var vrFrameData;
+var vrControls;
+var arView;
 
-THREEx.Portal360 = function(videoImageURL, doorWidth, doorHeight){
+var canvas;
+var camera;
+var scene;
+var renderer;
+var cube;
 
-	var doorCenter = new THREE.Group
-	doorCenter.position.y = doorHeight/2
-	this.object3d = doorCenter
+var portal;
 
-	//////////////////////////////////////////////////////////////////////////////
-	//		build texture360
-	//////////////////////////////////////////////////////////////////////////////
-	var isVideo = videoImageURL.match(/.(mp4|webm|ogv)/i) ? true : false
-	if( isVideo ){
-		var video = document.createElement( 'video' )
-		video.width = 640;
-		video.height = 360;
-		video.loop = true;
-		video.muted = true;
-		video.src = videoImageURL;
-		video.crossOrigin = 'anonymous'
-		video.setAttribute( 'webkit-playsinline', 'webkit-playsinline' );
-		video.play();
-
-		var texture360 = new THREE.VideoTexture( video );
-		texture360.minFilter = THREE.LinearFilter;
-		texture360.format = THREE.RGBFormat;
-		texture360.flipY = false;
-	}else{
-		var texture360 = new THREE.TextureLoader().load(videoImageURL)
-		texture360.minFilter = THREE.NearestFilter;
-		texture360.format = THREE.RGBFormat;
-		texture360.flipY = false;
-	}
-
-	//////////////////////////////////////////////////////////////////////////////
-	//		build mesh
-	//////////////////////////////////////////////////////////////////////////////
-
-	// create insideMesh which is visible IIF inside the portal
-	var insideMesh = this._buildInsideMesh(texture360, doorWidth, doorHeight)
-	doorCenter.add(insideMesh)
-	this.insideMesh = insideMesh
-
-	// create outsideMesh which is visible IIF outside the portal
-	var outsideMesh = this._buildOutsideMesh(texture360, doorWidth, doorHeight)
-	doorCenter.add(outsideMesh)
-	this.outsideMesh = outsideMesh
-
-	// create frameMesh for the frame of the portal
-	var frameMesh = this._buildRectangularFrame(doorWidth/100, doorWidth, doorHeight)
-	doorCenter.add(frameMesh)
-}
-//////////////////////////////////////////////////////////////////////////////
-//		Code Separator
-//////////////////////////////////////////////////////////////////////////////
-THREEx.Portal360.buildTransparentMaterial = function(){
-	// if there is a cached version, return it
-	if( THREEx.Portal360.buildTransparentMaterial.material ){
-		return THREEx.Portal360.buildTransparentMaterial.material
-	}
-	var material = new THREE.MeshBasicMaterial({
-		colorWrite: false // only write to z-buf
-	})
-	// an alternative to reach the same visual - this one seems way slower tho. My guess is it is hitting a slow-path in gpu
-	// var material   = new THREE.MeshBasicMaterial();
-	// material.color.set('black')
-	// material.opacity   = 0;
-	// material.blending  = THREE.NoBlending;
-
-	// cache the material
-	THREEx.Portal360.buildTransparentMaterial.material = material
-
-	return material
-}
-
-//////////////////////////////////////////////////////////////////////////////
-//		Build various cache
-//////////////////////////////////////////////////////////////////////////////
-THREEx.Portal360.buildSquareCache = function(){
-	var container = new THREE.Group
-	// add outter cube - invisibility cloak
-	var geometry = new THREE.PlaneGeometry(50,50);
-	var material = THREEx.Portal360.buildTransparentMaterial()
-
-	var mesh = new THREE.Mesh( geometry, material);
-	mesh.position.x =  geometry.parameters.width/2 + 0.5
-	mesh.position.y = -geometry.parameters.height/2 + 0.5
-	container.add(mesh)
-
-	var mesh = new THREE.Mesh( geometry, material);
-	mesh.position.x = -geometry.parameters.width/2 + 0.5
-	mesh.position.y = -geometry.parameters.height/2 - 0.5
-	container.add(mesh)
-
-	var mesh = new THREE.Mesh( geometry, material);
-	mesh.position.x = -geometry.parameters.width/2 - 0.5
-	mesh.position.y =  geometry.parameters.height/2 - 0.5
-	container.add(mesh)
-
-	var mesh = new THREE.Mesh( geometry, material);
-	mesh.position.x = +geometry.parameters.width/2 - 0.5
-	mesh.position.y =  geometry.parameters.height/2 + 0.5
-	container.add(mesh)
-
-	return container
-}
-
-//////////////////////////////////////////////////////////////////////////////
-//		build meshes
-//////////////////////////////////////////////////////////////////////////////
 
 /**
- * create insideMesh which is visible IIF inside the portal
+ * Use the `getARDisplay()` utility to leverage the WebVR API
+ * to see if there are any AR-capable WebVR VRDisplays. Returns
+ * a valid display if found. Otherwise, display the unsupported
+ * browser message.
  */
-THREEx.Portal360.prototype._buildInsideMesh	= function(texture360, doorWidth, doorHeight){
-	var doorInsideCenter = new THREE.Group
+THREE.ARUtils.getARDisplay().then(function (display) {
+  if (display) {
+    vrFrameData = new VRFrameData();
+    vrDisplay = display;
+    init();
+  } else {
+    THREE.ARUtils.displayUnsupportedMessage();
+  }
+});
 
-	// var squareCache = THREEx.Portal360.buildSquareCache()
-	// squareCache.scale.y = doorWidth
-	// squareCache.scale.y = doorHeight
-	// doorInsideCenter.add( squareCache )
+function init() {
+  // Turn on the debugging panel
+  var arDebug = new THREE.ARDebug(vrDisplay);
+  document.body.appendChild(arDebug.getElement());
 
-	var geometry = new THREE.PlaneGeometry(doorWidth, doorHeight)
-	var material = THREEx.Portal360.buildTransparentMaterial()
-	// var material = new THREE.MeshNormalMaterial()
-	var mesh = new THREE.Mesh( geometry, material)
-	mesh.rotation.y = Math.PI
-	// mesh.position.z = 0.03
-	doorInsideCenter.add( mesh )
+  // Setup the three.js rendering environment
+  renderer = new THREE.WebGLRenderer({ alpha: true });
+  renderer.setPixelRatio(window.devicePixelRatio);
+  console.log('setRenderer size', window.innerWidth, window.innerHeight);
+  renderer.setSize(window.innerWidth, window.innerHeight);
+  renderer.autoClear = false;
+  canvas = renderer.domElement;
+  document.body.appendChild(canvas);
+  scene = new THREE.Scene();
 
+  // Creating the ARView, which is the object that handles
+  // the rendering of the camera stream behind the three.js
+  // scene
+  arView = new THREE.ARView(vrDisplay, renderer);
 
-	//////////////////////////////////////////////////////////////////////////////
-	//		add 360 sphere
-	//////////////////////////////////////////////////////////////////////////////
-	// add 360 texture
-	// TODO put that in a this.data
-	var radius360Sphere = 10
-	// var radius360Sphere = 1
+  // The ARPerspectiveCamera is very similar to THREE.PerspectiveCamera,
+  // except when using an AR-capable browser, the camera uses
+  // the projection matrix provided from the device, so that the
+  // perspective camera's depth planes and field of view matches
+  // the physical camera on the device.
+  camera = new THREE.ARPerspectiveCamera(
+    vrDisplay,
+    60,
+    window.innerWidth / window.innerHeight,
+    vrDisplay.depthNear,
+    vrDisplay.depthFar
+  );
 
-	var geometry = new THREE.SphereGeometry( radius360Sphere, 16, 16).rotateZ(Math.PI)
-	var material = new THREE.MeshBasicMaterial( {
-		map: texture360,
-		// opacity: 0.9,
-		side: THREE.DoubleSide,
-	});
-	// var material = new THREE.MeshNormalMaterial()
-	var sphere360Mesh = new THREE.Mesh( geometry, material );
-	sphere360Mesh.position.z = -0.1
-	sphere360Mesh.rotation.y = Math.PI
-	doorInsideCenter.add(sphere360Mesh)
+  // VRControls is a utility from three.js that applies the device's
+  // orientation/position to the perspective camera, keeping our
+  // real world and virtual world in sync.
+  vrControls = new THREE.VRControls(camera);
 
-	return doorInsideCenter
+  // trying to get the portal door sample from Jerome Etienne
+  portal = new THREEx.Portal360("kikami.jpg", 1, 2);
+
+  // Bind our event handlers
+  window.addEventListener('resize', onWindowResize, false);
+  canvas.addEventListener('touchstart', onClick, false);
+
+  // Kick off the render loop!
+  update();
 }
 
 /**
- * create outsideMesh which is visible IIF outside the portal
+ * The render loop, called once per frame. Handles updating
+ * our scene and rendering.
  */
-THREEx.Portal360.prototype._buildOutsideMesh = function(texture360, doorWidth, doorHeight){
-	var doorOutsideCenter = new THREE.Group
+function update() {
+  // Update our camera projection matrix in the event that
+  // the near or far planes have updated
+  camera.updateProjectionMatrix();
 
-	//////////////////////////////////////////////////////////////////////////////
-	//		add squareCache
-	//////////////////////////////////////////////////////////////////////////////
-	var squareCache = THREEx.Portal360.buildSquareCache()
-	squareCache.scale.x = doorWidth
-	squareCache.scale.y = doorHeight
-	doorOutsideCenter.add( squareCache )
+  // From the WebVR API, populate `vrFrameData` with
+  // updated information for the frame
+  vrDisplay.getFrameData(vrFrameData);
 
-	//////////////////////////////////////////////////////////////////////////////
-	//		add 360 sphere
-	//////////////////////////////////////////////////////////////////////////////
-	// add 360 texture
-	var radius360Sphere = 10
-	// var radius360Sphere = 1
+  portal.update(vrFrameData.pose.position);
 
-	// build half sphere geometry
-	var geometry = new THREE.SphereGeometry( radius360Sphere, 16, 16, Math.PI, Math.PI, 0, Math.PI).rotateZ(Math.PI)
-	// fix UVs
-	geometry.faceVertexUvs[0].forEach(function(faceUvs){
-		faceUvs.forEach(function(uv){
-			uv.x /= 2
-		})
-	})
-	geometry.uvsNeedUpdate = true
-	var material = new THREE.MeshBasicMaterial( {
-		map: texture360,
-		// opacity: 0.9,
-		side: THREE.BackSide,
-	});
-	// var geometry = new THREE.SphereGeometry( radius360Sphere, 16, 16);
-	// var material = new THREE.MeshNormalMaterial()
-	var sphere360Mesh = new THREE.Mesh( geometry, material );
-	sphere360Mesh.position.z = -0.1
-	doorOutsideCenter.add(sphere360Mesh)
+  // Update our perspective camera's positioning
+  vrControls.update();
 
-	return doorOutsideCenter
+  // Render the device's camera stream on screen
+  arView.render();
+
+  // Render our three.js virtual scene
+  renderer.clearDepth();
+  renderer.render(scene, camera);
+
+  // Kick off the requestAnimationFrame to call this function
+  // on the next frame
+  requestAnimationFrame(update);
 }
 
 /**
- * create frameMesh for the frame of the portal
+ * On window resize, update the perspective camera's aspect ratio,
+ * and call `updateProjectionMatrix` so that we can get the latest
+ * projection matrix provided from the device
  */
-THREEx.Portal360.prototype._buildRectangularFrame = function(radius, width, height){
-	var container = new THREE.Group
-	var material = new THREE.MeshNormalMaterial()
-	var material = new THREE.MeshPhongMaterial({
-		color: 'silver',
-		emissive: 'green'
-	})
-
-	var geometryBeamVertical = new THREE.CylinderGeometry(radius, radius, height - radius)
-
-	// mesh right
-	var meshRight = new THREE.Mesh(geometryBeamVertical, material)
-	meshRight.position.x = width/2
-	container.add(meshRight)
-
-	// mesh right
-	var meshLeft = new THREE.Mesh(geometryBeamVertical, material)
-	meshLeft.position.x = -width/2
-	container.add(meshLeft)
-
-	var geometryBeamHorizontal = new THREE.CylinderGeometry(radius, radius, width - radius).rotateZ(Math.PI/2)
-
-	// mesh top
-	var meshTop = new THREE.Mesh(geometryBeamHorizontal, material)
-	meshTop.position.y = height/2
-	container.add(meshTop)
-
-	// mesh bottom
-	var meshBottom = new THREE.Mesh(geometryBeamHorizontal, material)
-	meshBottom.position.y = -height/2
-	container.add(meshBottom)
-
-	return container
+function onWindowResize () {
+  console.log('setRenderer size', window.innerWidth, window.innerHeight);
+  camera.aspect = window.innerWidth / window.innerHeight;
+  camera.updateProjectionMatrix();
+  renderer.setSize(window.innerWidth, window.innerHeight);
 }
 
-//////////////////////////////////////////////////////////////////////////////
-//		update function
-//////////////////////////////////////////////////////////////////////////////
+/**
+ * When clicking on the screen, create a cube at the user's
+ * current position.
+ */
+function onClick () {
+  // Fetch the pose data from the current frame
+  var pose = vrFrameData.pose;
 
-THREEx.Portal360.prototype.update = function (position) {
-	// determine if the user is isOutsidePortal
-  var worldPosition = new THREE.Vector3().fromArray(position);
-	var localPosition = this.object3d.worldToLocal(worldPosition)
-	var isOutsidePortal = localPosition.z >= 0 ? true : false
+  // Convert the pose orientation and position into
+  // THREE.Quaternion and THREE.Vector3 respectively
+  var ori = new THREE.Quaternion(
+    pose.orientation[0],
+    pose.orientation[1],
+    pose.orientation[2],
+    pose.orientation[3]
+  );
 
-	// handle mesh visibility based on isOutsidePortal
-	if( isOutsidePortal ){
-		this.outsideMesh.visible = true
-		this.insideMesh.visible = false
-	}else{
-		this.outsideMesh.visible = false
-		this.insideMesh.visible = true
-	}
+  var pos = new THREE.Vector3(
+    0,
+    0,
+    0
+  );
+
+  var dirMtx = new THREE.Matrix4();
+  dirMtx.makeRotationFromQuaternion(ori);
+
+  var push = new THREE.Vector3(0, 0, 0);
+  push.transformDirection(dirMtx);
+  pos.addScaledVector(push, 0.125);
+
+  // Clone our cube object and place it at the camera's
+  // current position
+  var clone = portal.object3d;
+  scene.add(clone);
+  clone.position.copy(pos);
+  clone.quaternion.copy(ori);
 }
-
-</script>
+    </script>
 </body>
 </html>
