--- a/examples/PortalWebAR.html
+++ b/examples/PortalWebAR.html
@@ -75,9 +75,9 @@
     <div id="info">
         <a href="https://github.com/google-ar/three.ar.js">three.ar.js</a><span class="title">Walk through the portal</span>
     </div>
-    <script src="https://google-ar.github.io/three.ar.js/third_party/three.js/three.js"></script>
-    <script src="https://google-ar.github.io/three.ar.js/third_party/three.js/VRControls.js"></script>
-    <script src="https://google-ar.github.io/three.ar.js/dist/three.ar.js"></script>
+    <script src="../third_party/three.js/three.js"></script>
+    <script src="../third_party/three.js/VRControls.js"></script>
+    <script src="../dist/three.ar.js"></script>
     <script src="threex-portal-door.js"></script>
     <script>
 
@@ -239,6 +239,6 @@ function onClick () {
   clone.position.copy(pos);
   clone.quaternion.copy(ori);
 }
-    </script>
+</script>
 </body>
 </html>
