--- a/examples/PortalWebAR.html
+++ b/examples/PortalWebAR.html
@@ -76,10 +76,10 @@
         <a href="https://github.com/google-ar/three.ar.js">three.ar.js</a><span class="title">Walk through the portal</span>
 
     </div>
-    <script src="https://google-ar.github.io/three.ar.js/third_party/three.js/three.js"></script>
-<script src="https://google-ar.github.io/three.ar.js/third_party/three.js/VRControls.js"></script>
-<script src="https://google-ar.github.io/three.ar.js/dist/three.ar.js"></script>
-<script src="threex-portal-door.js"></script>
+    <script src="../third_party/three.js/three.js"></script>
+    <script src="../third_party/three.js/VRControls.js"></script>
+    <script src="../dist/three.ar.js"></script>
+    <script src="threex-portal-door.js"></script>
     <script>
 
 var vrDisplay;
@@ -211,7 +211,7 @@ function onClick () {
   // Fetch the pose data from the current frame
   var pose = vrFrameData.pose;
 
-    /*  
+     
     // Convert the pose orientation and position into
   // THREE.Quaternion and THREE.Vector3 respectively
   var ori = new THREE.Quaternion(
@@ -241,7 +241,7 @@ function onClick () {
   clone.position.copy(pos);
   clone.quaternion.copy(ori);
 }
-*/
+
 </script>
 </body>
 </html>
