--- a/examples/PortalWebAR.html
+++ b/examples/PortalWebAR.html
@@ -127,14 +127,9 @@ function init() {
 
 
   // Turn on the debugging panel
-   // var arDebug = new THREE.ARDebug(vrDisplay);
+     var arDebug = new THREE.ARDebug(vrDisplay);
 
-    var arDebug = new THREE.ARDebug(vrDisplay, scene, {
-        showLastHit: false,
-        showPoseStatus: false,
-        showPlanes: true,
-    });
-  document.body.appendChild(arDebug.getElement());
+     document.body.appendChild(arDebug.getElement());
 
   
   // Creating the ARView, which is the object that handles
