--- a/examples/PortalWebAR.html
+++ b/examples/PortalWebAR.html
@@ -127,8 +127,12 @@ function init() {
 
 
   // Turn on the debugging panel
-     var arDebug = new THREE.ARDebug(vrDisplay);
-
+     //var arDebug = new THREE.ARDebug(vrDisplay);
+     var arDebug = new THREE.ARDebug(vrDisplay, scene, {
+         showLastHit: false,
+         showPoseStatus: false,
+         showPlanes: true,
+     });
      document.body.appendChild(arDebug.getElement());
 
   
