--- a/examples/PortalWebAR.html
+++ b/examples/PortalWebAR.html
@@ -113,8 +113,13 @@ THREE.ARUtils.getARDisplay().then(function (display) {
 });
 
 function init() {
-  // Turn on the debugging panel
-  var arDebug = new THREE.ARDebug(vrDisplay);
+
+    // Turn on the debugging panel
+  var arDebug = new THREE.ARDebug(vrDisplay, scene, {
+      showLastHit: false,
+      showPoseStatus: false,
+      showPlanes: true,
+  });
   document.body.appendChild(arDebug.getElement());
 
   // Setup the three.js rendering environment
