--- a/examples/PortalWebAR.html
+++ b/examples/PortalWebAR.html
@@ -114,23 +114,22 @@ THREE.ARUtils.getARDisplay().then(function (display) {
 
 function init() {
 
-    // Turn on the debugging panel
-  var arDebug = new THREE.ARDebug(vrDisplay, scene, {
-      showLastHit: false,
-      showPoseStatus: false,
-      showPlanes: true,
-  });
+    // Setup the three.js rendering environment
+    renderer = new THREE.WebGLRenderer({ alpha: true });
+    renderer.setPixelRatio(window.devicePixelRatio);
+    console.log('setRenderer size', window.innerWidth, window.innerHeight);
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    renderer.autoClear = false;
+    canvas = renderer.domElement;
+    document.body.appendChild(canvas);
+    scene = new THREE.Scene();
+
+  // Turn on the debugging panel
+  var arDebug = new THREE.ARDebug(vrDisplay);
   document.body.appendChild(arDebug.getElement());
 
-  // Setup the three.js rendering environment
-  renderer = new THREE.WebGLRenderer({ alpha: true });
-  renderer.setPixelRatio(window.devicePixelRatio);
-  console.log('setRenderer size', window.innerWidth, window.innerHeight);
-  renderer.setSize(window.innerWidth, window.innerHeight);
-  renderer.autoClear = false;
-  canvas = renderer.domElement;
-  document.body.appendChild(canvas);
-  scene = new THREE.Scene();
+ 
+
 
   // Creating the ARView, which is the object that handles
   // the rendering of the camera stream behind the three.js
