--- a/examples/PortalWebAR.html
+++ b/examples/PortalWebAR.html
@@ -159,7 +159,7 @@ function init() {
   vrControls = new THREE.VRControls(camera);
 
   // trying to get the portal door sample from Jerome Etienne
-  portal = new THREEx.Portal360("2.mp4", 0.5, 1);
+  portal = new THREEx.Portal360("1.jpg", 0.5, 1);
 
   // Bind our event handlers
   window.addEventListener('resize', onWindowResize, false);
