--- a/examples/PortalWebAR.html
+++ b/examples/PortalWebAR.html
@@ -113,27 +113,19 @@ THREE.ARUtils.getARDisplay().then(function (display) {
 });
 
 function init() {
+  // Turn on the debugging panel
+  var arDebug = new THREE.ARDebug(vrDisplay);
+  document.body.appendChild(arDebug.getElement());
 
-    // Setup the three.js rendering environment
-    renderer = new THREE.WebGLRenderer({ alpha: true });
-    renderer.setPixelRatio(window.devicePixelRatio);
-    console.log('setRenderer size', window.innerWidth, window.innerHeight);
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    renderer.autoClear = false;
-    canvas = renderer.domElement;
-    document.body.appendChild(canvas);
-    scene = new THREE.Scene();
-
-    // Turn on the debugging panel
-    var arDebug = new THREE.ARDebug(vrDisplay, scene, {
-        showLastHit: false,
-        showPoseStatus: false,
-        showPlanes: true,
-    });
-    document.body.appendChild(arDebug.getElement());
-
- 
-
+  // Setup the three.js rendering environment
+  renderer = new THREE.WebGLRenderer({ alpha: true });
+  renderer.setPixelRatio(window.devicePixelRatio);
+  console.log('setRenderer size', window.innerWidth, window.innerHeight);
+  renderer.setSize(window.innerWidth, window.innerHeight);
+  renderer.autoClear = false;
+  canvas = renderer.domElement;
+  document.body.appendChild(canvas);
+  scene = new THREE.Scene();
 
   // Creating the ARView, which is the object that handles
   // the rendering of the camera stream behind the three.js
@@ -159,7 +151,7 @@ function init() {
   vrControls = new THREE.VRControls(camera);
 
   // trying to get the portal door sample from Jerome Etienne
-  portal = new THREEx.Portal360("1.jpg", 0.5, 1);
+  portal = new THREEx.Portal360("1.jpg", 1, 2);
 
   // Bind our event handlers
   window.addEventListener('resize', onWindowResize, false);
@@ -215,9 +207,7 @@ function onWindowResize () {
  * When clicking on the screen, create a cube at the user's
  * current position.
  */
-function onClick() {
-
-
+function onClick () {
   // Fetch the pose data from the current frame
   var pose = vrFrameData.pose;
 
