--- a/examples/PortalWebAR.html
+++ b/examples/PortalWebAR.html
@@ -113,37 +113,36 @@ THREE.ARUtils.getARDisplay().then(function (display) {
 });
 
 function init() {
-  // Turn on the debugging panel
-  var arDebug = new THREE.ARDebug(vrDisplay);
-  document.body.appendChild(arDebug.getElement());
+    // Setup the three.js rendering environment
+    renderer = new THREE.WebGLRenderer({ alpha: true });
+    renderer.setPixelRatio(window.devicePixelRatio);
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    renderer.autoClear = false;
+    canvas = renderer.domElement;
+    document.body.appendChild(canvas);
+    scene = new THREE.Scene();
 
-  // Setup the three.js rendering environment
-  renderer = new THREE.WebGLRenderer({ alpha: true });
-  renderer.setPixelRatio(window.devicePixelRatio);
-  console.log('setRenderer size', window.innerWidth, window.innerHeight);
-  renderer.setSize(window.innerWidth, window.innerHeight);
-  renderer.autoClear = false;
-  canvas = renderer.domElement;
-  document.body.appendChild(canvas);
-  scene = new THREE.Scene();
+    // Turn on the debugging panel
+    var arDebug = new THREE.ARDebug(vrDisplay, scene, { showPlanes: true });
+    document.body.appendChild(arDebug.getElement());
 
-  // Creating the ARView, which is the object that handles
-  // the rendering of the camera stream behind the three.js
-  // scene
-  arView = new THREE.ARView(vrDisplay, renderer);
+    // Creating the ARView, which is the object that handles
+    // the rendering of the camera stream behind the three.js
+    // scene
+    arView = new THREE.ARView(vrDisplay, renderer);
 
-  // The ARPerspectiveCamera is very similar to THREE.PerspectiveCamera,
-  // except when using an AR-capable browser, the camera uses
-  // the projection matrix provided from the device, so that the
-  // perspective camera's depth planes and field of view matches
-  // the physical camera on the device.
-  camera = new THREE.ARPerspectiveCamera(
-    vrDisplay,
-    60,
-    window.innerWidth / window.innerHeight,
-    vrDisplay.depthNear,
-    vrDisplay.depthFar
-  );
+    // The ARPerspectiveCamera is very similar to THREE.PerspectiveCamera,
+    // except when using an AR-capable browser, the camera uses
+    // the projection matrix provided from the device, so that the
+    // perspective camera's depth planes and field of view matches
+    // the physical camera on the device.
+    camera = new THREE.ARPerspectiveCamera(
+      vrDisplay,
+      60,
+      window.innerWidth / window.innerHeight,
+      vrDisplay.depthNear,
+      vrDisplay.depthFar
+    );
 
   // VRControls is a utility from three.js that applies the device's
   // orientation/position to the perspective camera, keeping our
@@ -166,29 +165,41 @@ function init() {
  * our scene and rendering.
  */
 function update() {
-  // Update our camera projection matrix in the event that
-  // the near or far planes have updated
-  camera.updateProjectionMatrix();
+  
 
-  // From the WebVR API, populate `vrFrameData` with
-  // updated information for the frame
-  vrDisplay.getFrameData(vrFrameData);
+ 
 
   portal.update(vrFrameData.pose.position);
 
-  // Update our perspective camera's positioning
-  vrControls.update();
+ 
 
-  // Render the device's camera stream on screen
+
+    // Clears color from the frame before rendering the camera (arView) or scene.
+  renderer.clearColor();
+
+    // Render the device's camera stream on screen first of all.
+    // It allows to get the right pose synchronized with the right frame.
   arView.render();
 
-  // Render our three.js virtual scene
+    // Update our camera projection matrix in the event that
+    // the near or far planes have updated
+  camera.updateProjectionMatrix();
+
+
+    // From the WebVR API, populate `vrFrameData` with
+    // updated information for the frame
+  //vrDisplay.getFrameData(vrFrameData);
+
+    // Update our perspective camera's positioning
+  vrControls.update();
+
+    // Render our three.js virtual scene
   renderer.clearDepth();
   renderer.render(scene, camera);
 
-  // Kick off the requestAnimationFrame to call this function
-  // on the next frame
-  requestAnimationFrame(update);
+    // Kick off the requestAnimationFrame to call this function
+    // when a new VRDisplay frame is rendered
+  vrDisplay.requestAnimationFrame(update);
 }
 
 /**
