--- a/examples/PortalWebAR.html
+++ b/examples/PortalWebAR.html
@@ -188,7 +188,7 @@ function update() {
 
     // From the WebVR API, populate `vrFrameData` with
     // updated information for the frame
-  //vrDisplay.getFrameData(vrFrameData);
+   vrDisplay.getFrameData(vrFrameData);
 
     // Update our perspective camera's positioning
   vrControls.update();
