--- a/examples/PortalWebAR.html
+++ b/examples/PortalWebAR.html
@@ -166,14 +166,6 @@ function init() {
  */
 function update() {
   
-
- 
-
-  portal.update(vrFrameData.pose.position);
-
- 
-
-
     // Clears color from the frame before rendering the camera (arView) or scene.
   renderer.clearColor();
 
@@ -188,7 +180,8 @@ function update() {
 
     // From the WebVR API, populate `vrFrameData` with
     // updated information for the frame
-   vrDisplay.getFrameData(vrFrameData);
+    //vrDisplay.getFrameData(vrFrameData);
+    portal.update(vrFrameData.pose.position);
 
     // Update our perspective camera's positioning
   vrControls.update();
