--- a/examples/PortalWebAR.html
+++ b/examples/PortalWebAR.html
@@ -113,36 +113,37 @@ THREE.ARUtils.getARDisplay().then(function (display) {
 });
 
 function init() {
-    // Setup the three.js rendering environment
-    renderer = new THREE.WebGLRenderer({ alpha: true });
-    renderer.setPixelRatio(window.devicePixelRatio);
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    renderer.autoClear = false;
-    canvas = renderer.domElement;
-    document.body.appendChild(canvas);
-    scene = new THREE.Scene();
+  // Turn on the debugging panel
+  var arDebug = new THREE.ARDebug(vrDisplay);
+  document.body.appendChild(arDebug.getElement());
 
-    // Turn on the debugging panel
-    var arDebug = new THREE.ARDebug(vrDisplay, scene, { showPlanes: true });
-    document.body.appendChild(arDebug.getElement());
+  // Setup the three.js rendering environment
+  renderer = new THREE.WebGLRenderer({ alpha: true });
+  renderer.setPixelRatio(window.devicePixelRatio);
+  console.log('setRenderer size', window.innerWidth, window.innerHeight);
+  renderer.setSize(window.innerWidth, window.innerHeight);
+  renderer.autoClear = false;
+  canvas = renderer.domElement;
+  document.body.appendChild(canvas);
+  scene = new THREE.Scene();
 
-    // Creating the ARView, which is the object that handles
-    // the rendering of the camera stream behind the three.js
-    // scene
-    arView = new THREE.ARView(vrDisplay, renderer);
+  // Creating the ARView, which is the object that handles
+  // the rendering of the camera stream behind the three.js
+  // scene
+  arView = new THREE.ARView(vrDisplay, renderer);
 
-    // The ARPerspectiveCamera is very similar to THREE.PerspectiveCamera,
-    // except when using an AR-capable browser, the camera uses
-    // the projection matrix provided from the device, so that the
-    // perspective camera's depth planes and field of view matches
-    // the physical camera on the device.
-    camera = new THREE.ARPerspectiveCamera(
-      vrDisplay,
-      60,
-      window.innerWidth / window.innerHeight,
-      vrDisplay.depthNear,
-      vrDisplay.depthFar
-    );
+  // The ARPerspectiveCamera is very similar to THREE.PerspectiveCamera,
+  // except when using an AR-capable browser, the camera uses
+  // the projection matrix provided from the device, so that the
+  // perspective camera's depth planes and field of view matches
+  // the physical camera on the device.
+  camera = new THREE.ARPerspectiveCamera(
+    vrDisplay,
+    60,
+    window.innerWidth / window.innerHeight,
+    vrDisplay.depthNear,
+    vrDisplay.depthFar
+  );
 
   // VRControls is a utility from three.js that applies the device's
   // orientation/position to the perspective camera, keeping our
@@ -188,7 +189,6 @@ function update() {
   // Kick off the requestAnimationFrame to call this function
   // on the next frame
   requestAnimationFrame(update);
-
 }
 
 /**
