--- a/examples/PortalWebAR.html
+++ b/examples/PortalWebAR.html
@@ -114,7 +114,11 @@ THREE.ARUtils.getARDisplay().then(function (display) {
 
 function init() {
   // Turn on the debugging panel
-  var arDebug = new THREE.ARDebug(vrDisplay);
+    var arDebug = new THREE.ARDebug(vrDisplay, scene, {
+        showLastHit: true,
+        showPoseStatus: true,
+        showPlanes: true,
+    });
   document.body.appendChild(arDebug.getElement());
 
   // Setup the three.js rendering environment
