--- a/examples/PortalWebAR.html
+++ b/examples/PortalWebAR.html
@@ -160,7 +160,7 @@ function init() {
   vrControls = new THREE.VRControls(camera);
 
   // trying to get the portal door sample from Jerome Etienne
-  portal = new THREEx.Portal360("1.jpg", 1, 2);
+  portal = new THREEx.Portal360("2.mp4", 1, 2);
 
   // Bind our event handlers
   window.addEventListener('resize', onWindowResize, false);
